@@ -1,5 +1,8 @@
 --------------------------
 Changes in 1.8.6
+- CImageLoaderBMP: check bitmap data against required size. Thanks @sfan5 for bug report and patch 
+  Report: https://irrlicht.sourceforge.io/forum/viewtopic.php?p=307195
+  Patch (commit 028cb8d to Minetest): https://github.com/minetest/irrlicht/commit/028cb8dbed8266264a5804108191f56e238db1bc
 - Fix OSX 10.9X build problem related to NSApplication setDelegate calls getting casted to wrong class (Bug #462 and also fixing older Bug #297)
   Thanks @Ryan Schmidt for bug report and patch.
 - Backport: Fix compiling for Apple silicon (Bugs #452 and #461). Thanks @Ryan Schmidt for bug report and updated patch.
